--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="container">
         <h2>Máy Tính Tuổi Thông Minh</h2>
-        <p>Bạn bao nhiêu tuổi?</p>
+        <p>Nhập số tuổi của bạn</p>
         <input type="number" id="ageInput" placeholder="Nhập số tuổi của bạn...">
         <br>
         <button onclick="calculateAge()">Tính kết quả</button>
@@ -111,4 +111,5 @@
     </script>
 
 </body>
+
 </html>
